tests/conformance/errors/native_error_stack/input.dgm
fn crash() {
  push(1, 2)
}

crash()
